Fix last player not correctly progressing to score screen
