# spectrumal-frontend/app/api/models/PointGuessResponse.ts
@@ -1,0 +1,65 @@
+/* tslint:disable */
+/* eslint-disable */
+/**
+ * OpenAPI
+ * OpenAPI
+ *
+ * The version of the OpenAPI document: 0.0.1
+ * 
+ *
+ * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+ * https://openapi-generator.tech
+ * Do not edit the class manually.
+ */
+
+import { mapValues } from '../runtime';
+/**
+ * 
+ * @export
+ * @interface PointGuessResponse
+ */
+export interface PointGuessResponse {
+    /**
+     * 
+     * @type {boolean}
+     * @memberof PointGuessResponse
+     */
+    showWaitingScreen?: boolean;
+}
+
+/**
+ * Check if a given object implements the PointGuessResponse interface.
+ */
+export function instanceOfPointGuessResponse(value: object): value is PointGuessResponse {
+    return true;
+}
+
+export function PointGuessResponseFromJSON(json: any): PointGuessResponse {
+    return PointGuessResponseFromJSONTyped(json, false);
+}
+
+export function PointGuessResponseFromJSONTyped(json: any, ignoreDiscriminator: boolean): PointGuessResponse {
+    if (json == null) {
+        return json;
+    }
+    return {
+        
+        'showWaitingScreen': json['showWaitingScreen'] == null ? undefined : json['showWaitingScreen'],
+    };
+}
+
+export function PointGuessResponseToJSON(json: any): PointGuessResponse {
+    return PointGuessResponseToJSONTyped(json, false);
+}
+
+export function PointGuessResponseToJSONTyped(value?: PointGuessResponse | null, ignoreDiscriminator: boolean = false): any {
+    if (value == null) {
+        return value;
+    }
+
+    return {
+        
+        'showWaitingScreen': value['showWaitingScreen'],
+    };
+}
+
