# spectrumal-frontend/spectrumal-openapi.json
@@ -128,7 +128,11 @@
           "default" : {
             "description" : "default response",
             "content" : {
-              "*/*" : { }
+              "*/*" : {
+                "schema" : {
+                  "$ref" : "#/components/schemas/PointGuessResponse"
+                }
+              }
             }
           }
         }
@@ -392,6 +396,14 @@
         "properties" : {
           "score" : {
             "$ref" : "#/components/schemas/Score"
+          }
+        }
+      },
+      "PointGuessResponse" : {
+        "type" : "object",
+        "properties" : {
+          "showWaitingScreen" : {
+            "type" : "boolean"
           }
         }
       },
